WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185119
WordLock doesn't need per-thread data
https://bugs.webkit.org/show_bug.cgi?id=185119
Summary
WordLock doesn't need per-thread data
Geoffrey Garen
Reported
2018-04-29 08:33:23 PDT
WordLock doesn't need per-thread data
Attachments
Patch
(4.40 KB, patch)
2018-04-29 08:41 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2018-04-29 08:41:46 PDT
Created
attachment 339092
[details]
Patch
Geoffrey Garen
Comment 2
2018-04-29 08:44:21 PDT
Benchmark results look neutral to me: ~/OpenSource> ./LockSpeedTest-baseline wordlock 1 4 1 0 40 2 WTFWordLock: 40014.319 KHz WTFWordLock = {40014.319}; ===== ~/OpenSource> ./LockSpeedTest wordlock 1 4 1 0 40 2 WTFWordLock: 41667.624 KHz WTFWordLock = {41667.624}; ===== ~/OpenSource> ./LockSpeedTest-baseline wordlock 1 4 10 20 40 2 WTFWordLock: 15257.590 KHz WTFWordLock = {15257.590}; ===== ~/OpenSource> ./LockSpeedTest wordlock 1 4 10 20 40 2 WTFWordLock: 15336.106 KHz WTFWordLock = {15336.106}; ===== ~/OpenSource> ./LockSpeedTest-baseline wordlock 1 4 128 1024 40 2 WTFWordLock: 1505.244 KHz WTFWordLock = {1505.244}; ===== ~/OpenSource> ./LockSpeedTest wordlock 1 4 128 1024 40 2 WTFWordLock: 1506.206 KHz WTFWordLock = {1506.206};
Yusuke Suzuki
Comment 3
2018-04-29 10:02:17 PDT
Comment on
attachment 339092
[details]
Patch r=me if it does not cause perf regression. I think it should be perf-neutral since basically constructing ThreadData is cheap. I think we can use this approach in ParkingLot to remove ThreadSpecific.
WebKit Commit Bot
Comment 4
2018-04-29 10:29:18 PDT
Comment on
attachment 339092
[details]
Patch Clearing flags on attachment: 339092 Committed
r231151
: <
https://trac.webkit.org/changeset/231151
>
WebKit Commit Bot
Comment 5
2018-04-29 10:29:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-04-29 10:30:56 PDT
<
rdar://problem/39825097
>
Geoffrey Garen
Comment 7
2018-04-29 16:06:20 PDT
> I think we can use this approach in ParkingLot to remove ThreadSpecific.
That would be cool!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug